# impala

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  run.py  run.sh  run_catch.py  run_impala.py  sweep.sh
redis/: Dockerfile  run.sh
src/: agent.py  run.py  sweep.py
src/gpt/: __init__.py  convert.py  learner.py  net.py  pretrained.py
src/gpt/model/: __init__.py  architecture.py  embedding.py  sampling.py  tokenizer.py  transformer.py  util.py
