[tool.poetry]
name = "impala-gpt"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
jaxlib = {url = "https://storage.googleapis.com/jax-releases/cuda112/jaxlib-0.1.65+cuda112-cp38-none-manylinux2010_x86_64.whl"}
halo = "^0.0.31"
requests = "^2.25.1"
transformers = "^4.6.1"
dm-acme = {extras = ["envs","jax"], version = "^0.2.1"}
tensorflow = "^2.5.0"
dm-reverb = {extras = ["tensorflow"], version = "^0.3.1"}
Cython = "^0.29.23"
sonnet = "^0.1.6"

[tool.poetry.dev-dependencies]
ipython = "^7.24.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
